# src

moveit_com/: .setup_assistant  CMakeLists.txt  package.xml
moveit_com/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robo_com.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_com/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gmapping.launch  move_group.launch  multi_robo.launch  navigation.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
moveit_com/map/: map.pgm  mymap.pgm
moveit_com/param/: base_local_planner_params.yaml  board_config.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
moveit_com/rviz/: com.rviz
moveit_com/scripts/: Shape Classifier.py  alog_node  (+18 more)
robo_com/: CMakeLists.txt  package.xml
robo_com/config/: joint_names_robo_com.yaml
robo_com/launch/: display.launch  gazebo.launch
robo_com/meshes/: arm1.STL  arm2.STL  arm3.STL  arm4.STL  arm_sen.STL  base_link.STL  bwl.STL  bwr.STL  cam_sen.STL  end1.STL  end2.STL  fwl.STL  fwr.STL  laser_sen.STL
robo_com/urdf/: robo_com.csv  robo_com.urdf
robo_com/world/: world.world
robo_com/world/Untitled/: model.sdf
robo_com/world/map/: model.sdf
(+6 files in other folders)
